# dewey

./: .env  .env.example  .gitignore  Cargo.toml  dev-watch.sh  diesel.toml  docker-compose.yaml  readme.md
config/redis/: redis.conf
migrations/2019-02-19-013703_create_users/: down.sql  up.sql
migrations/2019-02-19-020754_create_objects_and_properties/: down.sql  up.sql
migrations/2019-02-19-203007_constrain_property_types/: down.sql  up.sql
migrations/2019-02-19-205645_add_timestamptz_values_table/: down.sql  up.sql
migrations/2019-02-19-211101_dev_seed_values/: down.sql  up.sql
migrations/2019-02-20-005201_refine_constraints/: down.sql  up.sql
migrations/2019-02-20-011113_sql_functions/: down.sql  up.sql
migrations/2019-02-20-015721_create_collection_property/: down.sql  up.sql
migrations/2019-02-21-181001_create_user_google_oauth_tokens/: down.sql  up.sql
migrations/2019-02-22-184535_create_user_tokens_version_view/: down.sql  up.sql
migrations/2019-02-24-012216_add_default_created_at_for_user_tokens/: down.sql  up.sql
migrations/2019-02-25-154036_add_email_to_user/: down.sql  up.sql
migrations/2019-02-25-221235_add_photo_url_to_users/: down.sql  up.sql
migrations/2019-03-06-232459_add_object_kind_bucket_and_key/: down.sql  up.sql
scripts/: minio_start.sh
src/: config.rs  db.rs  google_oauth.rs  google_oauth_async.rs  google_people_client.rs  logging.rs  main.rs  models.rs  schema.patch  schema.rs  session_manager.rs  state.rs  templates.rs  upload.rs
src/app/: mod.rs  templates.rs  (+1 more)
static/: app.css  app.html  privacy.html  upload.html
templates/: hello.html.j2  page.html.j2  upload.html.j2
(+55 files in other folders)
