[package]
name = "actix_upload_s3"
version = "0.1.0"
authors = ["Cole R Lawrence <msgzht@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "*"
futures = "0.1"

actix = "0.7"
actix-web = "0.7"
actix-redis = "0.5"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
dotenv_codegen = "0.11.0"
reqwest = "0.9.10"
serde = "^1.0"
serde_json = "^1.0"
rand = "^0.6"
