[package]
name = "dewey"
version = "0.1.0"
authors = ["Cole Lawrence <cole@reaktor.com>"]
edition = "2018"

[dependencies]
chrono = "0.4.0"
dotenv = "0.9.0"
dotenv_codegen = "0.11.0"
env_logger = "0.6"
futures = "0.1"
log = "0.4.6"
rand = "^0.6"

actix = "0.7"
actix-web = "0.7"
actix-redis = "0.5"
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
reqwest = "0.9.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
