[package]
name = "dewey"
version = "0.1.0"
authors = ["Cole Lawrence <cole@reaktor.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
dotenv = "0.9.0"
dotenv_codegen = "0.11.0"
env_logger = "0.6"
futures = "0.1"
log = "0.4.6"
rand = "^0.6"

actix = "0.7"
actix-web = { version = "0.7", features = ["default", "ssl"] }
actix-redis = "0.5"
askama = "0.8"
diesel = { version = "1.4.1", features = ["postgres", "r2d2", "chrono"] }
diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
diesel-derive-newtype = "0.1.2"
redis-async = "^0.4"
reqwest = "0.9.10"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

clap = "^2.0"
